--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -1,6 +1,5 @@
 $txt-color: #666666;
 $white: #fff;
-$color-hover: #c3a27c;
 $black: #000000;
 $color-main: #f5a81c;
 $color-2: #dc0505;
@@ -13,6 +12,7 @@ $center: center;
 $w100: 100%;
 $font-1: 'Kanit', sans-serif;
 $font-2: 'Cerebri';
+$font-3: 'Cerebri-Regular';
 
 $res_1760: 1760px;
 $res_1600: 1600px;
