--- a/app/scss/component/_index.scss
+++ b/app/scss/component/_index.scss
@@ -5,13 +5,14 @@
 @forward './swiper';
 @forward './tab';
 @forward './menu';
-@forward './flat-accordion'; 
+@forward './flat-accordion';
 @forward './footer';
 @forward './animate';
 @forward './magnific-popup';
 @forward './progress-bar';
-@forward './home'; 
-@forward './reponsive'; 
+@forward './home';
 @forward './topbar';
 @forward './extrass_class';
 @forward './spacing';
+@forward './footer';
+@forward './reponsive';
