--- a/app/scss/component/_spacing.scss
+++ b/app/scss/component/_spacing.scss
@@ -6,20 +6,35 @@
 $spaceamounts: (
     0,
     4,
+    5,
     8,
     10,
+    12,
+    14,
     15,
     16,
+    18,
     20,
+    22,
     24,
     25,
     28,
     30,
     32,
+    35,
     36,
+    38,
     40,
     45,
-    75
+    48,
+    50,
+    75,
+    76,
+    84,
+    100,
+    123,
+    120,
+    130
 );
 // Adjust this to include the pixel amounts you need.
 
