--- a/app/scss/component/_header.scss
+++ b/app/scss/component/_header.scss
@@ -7,6 +7,14 @@
 }
 
 .header {
+    &.style2 {
+        top: 0;
+        height: 120px;
+
+        .main-nav {
+            left: 250px;
+        }
+    }
 
     .hamburger {
         width: 63px;
@@ -36,41 +44,48 @@
     background-color: transparent;
     @include flex(center, space-between);
 
+    &.toggle {
+        z-index: 12;
+    }
+
     #site-header {
-        background-color: $color-4;
-        height: 87px;
-        position: relative;
-        border-radius: 100px;
-        @include flex(center, flex-start);
-
-        &::before {
-            border-radius: 100px;
-            position: absolute;
-            left: 0;
-            top: 0px;
-            width: 100%;
-            height: 80px;
-            content: "";
-            background-image: -moz-linear-gradient(90deg, rgb(202, 2, 3) 0%, rgb(255, 0, 1) 100%);
-            background-image: -webkit-linear-gradient(90deg, rgb(202, 2, 3) 0%, rgb(255, 0, 1) 100%);
-            background-image: -ms-linear-gradient(90deg, rgb(202, 2, 3) 0%, rgb(255, 0, 1) 100%);
-        }
-
-        .site-header-inner {
+        &.style1 {
+            background-color: $color-4;
+            height: 92px;
             position: relative;
-            z-index: 1;
+            border-radius: 100px;
+            @include flex(center, flex-start);
+
+            &::before {
+                border-radius: 100px;
+                position: absolute;
+                left: 0;
+                top: 0px;
+                width: 100%;
+                height: 88px;
+                content: "";
+                background-image: -moz-linear-gradient(90deg, rgb(202, 2, 3) 0%, rgb(255, 0, 1) 100%);
+                background-image: -webkit-linear-gradient(90deg, rgb(202, 2, 3) 0%, rgb(255, 0, 1) 100%);
+                background-image: -ms-linear-gradient(90deg, rgb(202, 2, 3) 0%, rgb(255, 0, 1) 100%);
+            }
+
+            .site-header-inner {
+                position: relative;
+                z-index: 1;
+                margin-top: -8px;
+            }
         }
     }
 
     .main-nav {
+        z-index: 2;
         position: absolute;
         top: 50%;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         -o-transform: translateY(-50%);
         transform: translateY(-50%);
-        padding-left: 48px;
-        letter-spacing: 0.6px
+        padding-left: 45px;
     }
 
     .social {
@@ -131,7 +146,7 @@
 
     li {
         position: relative;
-        margin-right: 45px;
+        margin-right: 36px;
 
         .sub-menu {
             padding: 10px 6px;
@@ -154,6 +169,12 @@
             font-weight: 500;
             padding: 31px 0;
 
+            &:hover {
+                &::after {
+                    color: $color-main !important;
+                }
+            }
+
             &::before {
                 height: 3px;
                 position: absolute;
@@ -161,7 +182,7 @@
                 background-color: $color-main;
                 content: "";
                 left: 0;
-                bottom: 25px;
+                bottom: 22px;
                 opacity: 0;
                 @include transition3;
                 border-radius: 8px;
@@ -221,12 +242,15 @@
     width: 100%;
     opacity: 0;
 
+    &.style1.is-fixed.is-small {
+        height: 87px;
+    }
+
     &.is-fixed.is-small {
         @include transition5;
         top: -1px;
         opacity: 1;
         visibility: visible;
-        height: 87px;
 
         .show-light {
             display: none !important;
@@ -248,15 +272,14 @@
             display: flex;
         }
 
-        #main-nav .menu li.menu-item-has-children>a::after,
-        #main-nav .menu li>a {
+        #main-nav .menu li.menu-item-has-children>a::after {
             color: $white;
         }
 
         #main-nav .sub-menu li a {
 
             &:hover {
-                color: $color-hover;
+                color: $color-main;
             }
         }
     }
