--- a/app/scss/component/_topbar.scss
+++ b/app/scss/component/_topbar.scss
@@ -2,20 +2,156 @@
 
 /* Topbar
 -------------------------------------------------------------- */
-.topbar {
-    position: relative;
-    z-index: 11;
-    height: 115px;
-    @include flex(center, flex-start);
+.header__logo,
+.topbar__logo {
+    width: 196px;
+    height: 59px;
+}
 
-    .topbar__logo {
-        width: 196px;
-        height: 59px;
+.topbar {
+    &.style {
+        position: relative;
+        z-index: 11;
+        height: 115px;
+        @include flex(center, flex-start);
+    }
+
+    #language {
+        position: relative;
+        z-index: 9;
+        width: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        &.style2 {
+            .btn-selector {
+                color: $white;
+            }
+
+            svg {
+                path {
+                    fill: $white;
+                }
+            }
+        }
+
+        svg {
+            width: 15px;
+            height: 15px;
+            position: absolute;
+            right: -16px;
+            top: 6px;
+        }
+
+        .icon {
+            position: absolute;
+            left: 0;
+        }
+
+        .btn-selector {
+            padding-left: 40px;
+            color: $color-3;
+            margin-right: -10px;
+        }
+
+        .dropdown-menu {
+            max-width: 100px;
+            border: none;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+            li {
+                @include flex(center, flex-start);
+
+                &:hover {
+                    cursor: pointer;
+                }
+
+                img {
+                    margin-right: 8px;
+                }
+
+                span {
+                    color: $color-3;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    max-width: 100%;
+                    display: inline-block;
+                }
+            }
+        }
+
+        img {
+            width: 27px;
+            height: 27px;
+        }
+    }
+
+    .action {
+        height: 50px;
+        padding: 0 16px;
+        @include flex(center, center);
+        border-radius: 25px;
+        margin-right: 28px;
+
+        &.bg-2 {
+            li {
+                a {
+
+                    &.active,
+                    &:hover {
+                        background-color: $black;
+
+                        svg {
+                            path {
+                                fill: $white;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        li {
+            a {
+                background-color: transparent;
+                width: 41px;
+                height: 41px;
+                margin: 0 4px;
+                border-radius: 50%;
+                @include flex(center, center);
+
+                svg {
+                    position: relative;
+                    width: 15px;
+                    height: 15px;
+
+                    path {
+                        @include transition3;
+                        fill: $white;
+                    }
+                }
+
+                &:hover,
+                &.active {
+                    background-color: rgba(255, 255, 255, 0.1);
+
+                    svg {
+                        path {
+                            fill: $color-main;
+                        }
+                    }
+                }
+            }
+        }
+
     }
 
     .topbar-info {
         width: calc(100% - 196px);
         @include flex(center, flex-end);
+        margin-top: -5px;
 
         .phone {
             p {
@@ -32,6 +168,7 @@
                     line-height: 35px;
                     font-style: italic;
                     font-weight: 600;
+                    letter-spacing: 0.5px;
                 }
             }
         }
@@ -47,114 +184,5 @@
                 color: $white;
             }
         }
-
-        .action {
-            height: 50px;
-            padding: 0 8px;
-            @include flex(center, center);
-            border-radius: 25px;
-            margin-right: 30px;
-
-            li {
-                a {
-                    background-color: transparent;
-                    width: 41px;
-                    height: 41px;
-                    margin: 0 4px;
-                    border-radius: 50%;
-                    @include flex(center, center);
-
-                    svg {
-                        position: relative;
-                        width: 15px;
-                        height: 15px;
-
-                        path {
-                            @include transition3;
-                            fill: $white;
-                        }
-                    }
-
-                    &:hover,
-                    &.active {
-                        background-color: rgba(255, 255, 255, 0.1);
-
-                        svg {
-                            path {
-                                fill: $color-main;
-                            }
-                        }
-                    }
-                }
-            }
-
-        }
-
-        #language {
-            position: relative;
-            z-index: 9;
-            width: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-
-            svg {
-                width: 15px;
-                height: 15px;
-                position: absolute;
-                right: -8px;
-            }
-
-            .icon {
-                position: absolute;
-                left: 0;
-            }
-
-            .btn-selector {
-                padding-left: 35px;
-                color: $color-3;
-            }
-
-            .dropdown-menu {
-                max-width: 100px;
-                border: none;
-                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-
-                li {
-                    @include flex(center, flex-start);
-
-                    &:hover {
-                        cursor: pointer;
-                    }
-
-                    img {
-                        margin-right: 8px;
-                    }
-
-                    span {
-                        color: $color-3;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                        max-width: 100%;
-                        display: inline-block;
-                    }
-                }
-            }
-
-            img {
-                width: 27px;
-                height: 27px;
-            }
-        }
     }
-}
-
-.BG {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 1920px;
-    height: 8788px;
-    z-index: 20;
 }
